Keep the stand-in groups in order, and carry both halves of Iris's gate